--- a/pom.xml
+++ b/pom.xml
@@ -131,11 +131,11 @@
                  <archive>                                   
                    <manifest>
                         <mainClass>jcomicdownloader.ComicDownGUI</mainClass>
-                            <addClasspath>true</addClasspath>
-                            <addClasspath>true</addClasspath>
-                        <classpathPrefix>lib/</classpathPrefix>
+<!--                        <addClasspath>true</addClasspath>
+                        <classpathPrefix>lib/</classpathPrefix>-->
                    </manifest>
                     <manifestEntries><!-- Custom add classpath instead of maven gen-->
+                        <Class-Path>Jtattoo.1.6.11.jar lib/Jtattoo.1.6.11.jar nimrod-laf-1.2.jar lib/nimrod-laf-1.2.jar napkinlaf-1.2.jar lib/napkinlaf-1.2.jar trident-6.3.jar lib/trident-6.3.jar substance-6.3.jar lib/substance-6.3.jar jaudiotagger-2.2.3.jar lib/jaudiotagger-2.2.3.jar </Class-Path>
                         <SplashScreen-Image>jcomicdownloader/tools/resource/logo.png</SplashScreen-Image>
                     </manifestEntries>
                  </archive>
