Fix Classpath bug

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.abc9070410</groupId>
     <artifactId>JComicDownloader</artifactId>
-    <version>v5.19.150529</version>
+    <version>v5.19.150530</version>
     <packaging>jar</packaging>
     <description>A tool which has the ability to download the online comics and novels from some china websites.</description>
     <url>https://sites.google.com/site/jcomicdownloader</url>   
@@ -155,8 +155,8 @@
                         <classpathPrefix>lib/</classpathPrefix>-->
                    </manifest>
                     <manifestEntries><!-- Custom add classpath instead of maven gen-->
-                        <!--<Class-Path>JTattoo.1.6.11.jar lib/JTattoo.1.6.11.jar nimrod-laf-1.2.jar lib/nimrod-laf-1.2.jar napkinlaf-1.2.jar lib/napkinlaf-1.2.jar trident-6.3.jar lib/trident-6.3.jar substance-6.3.jar lib/substance-6.3.jar jaudiotagger-2.2.3.jar lib/jaudiotagger-2.2.3.jar </Class-Path>-->
-                        <Class-Path>JTattoo.1.6.11.jar lib/JTattoo.1.6.11.jar nimrod-laf-1.2.jar lib/nimrod-laf-1.2.jar napkinlaf-1.2.jar lib/napkinlaf-1.2.jar trident-6.3.jar lib/trident-6.3.jar substance-6.3.jar lib/substance-6.3.jar jaudiotagger-21e1b39.jar lib/jaudiotagger-21e1b39.jar </Class-Path>
+                        <!--<Class-Path>JTattoo-1.6.11.jar lib/JTattoo-1.6.11.jar nimrod-laf-1.2.jar lib/nimrod-laf-1.2.jar napkinlaf-1.2.jar lib/napkinlaf-1.2.jar trident-6.3.jar lib/trident-6.3.jar substance-6.3.jar lib/substance-6.3.jar jaudiotagger-2.2.3.jar lib/jaudiotagger-2.2.3.jar </Class-Path>-->
+                        <Class-Path>lib/JTattoo-1.6.11.jar lib/nimrod-laf-1.2.jar lib/napkinlaf-1.2.jar lib/trident-6.3.jar lib/substance-6.3.jar lib/jaudiotagger-21e1b39.jar </Class-Path>
                         <SplashScreen-Image>jcomicdownloader/tools/resource/logo.png</SplashScreen-Image>
                     </manifestEntries>
                  </archive>
